--- a/.env.example
+++ b/.env.example
@@ -15,3 +15,8 @@ OAUTH2_USER_INFO_URL=https://connect.linuxdo.org/api/user
 # 数据库配置
 DATABASE_URL=sqlite+aiosqlite:///./redeem_codes.db
 DEBUG=False
+
+# New API 配置（用于实时创建兑换码）
+NEWAPI_SITE_URL=https://your-newapi-site.com
+NEWAPI_ACCESS_TOKEN=sk-your-access-token-here
+NEWAPI_REDEEM_QUOTA=500000
