add newapi user

--- a/.env.example
+++ b/.env.example
@@ -19,4 +19,5 @@ DEBUG=False
 # New API 配置（用于实时创建兑换码）
 NEWAPI_SITE_URL=https://your-newapi-site.com
 NEWAPI_ACCESS_TOKEN=sk-your-access-token-here
+NEWAPI_USER=admin
 NEWAPI_REDEEM_QUOTA=500000
